# benchmark-generator

./: .gitignore  README.md  main.py  pyproject.toml
routers/: messages.py
steps/: __init__.py  benchmark_criteria.py  create_slides.py  explore_next_question.py  extract_metadata.py  extract_next_questions.py  insight_analysis.py  process_queries.py  query_decomposition.py  query_generation.py  report_generation.py  slide_generation.py  sub_question_search.py  update_report.py
utils/: llm_utils.py  logging_config.py  prompts.py  pydantic_models.py  schemas.py  search_utils.py  slide_utils.py  utils.py
